updates Jekyll pages to point to latest documentation.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,13 @@ emergence of cultural modernity.</p>
 
 <p>In 2015, the Blue Mountain Project received a grant from the
 <a href="http://digitalhumanities.princeton.edu">Center for Digital Humanities
-at Princeton University to develop Blue Mountain Springs.</p>
+at Princeton University</a> to experiment with Blue Mountain Springs.</p>
 
+<p>See the following documents for more information:</p>
+
+<ul>
+  <li>The <a href="https://github.com/Princeton-CDH/bluemountainsprings/blob/master/README.md">README file</a> in the GitHub repository</li>
+  <li> <a href="https://github.com/Princeton-CDH/bluemountainsprings/blob/master/doc/api-doc.org">The main documentation for the API.</a></li>
+  <li><a href="https://github.com/Princeton-CDH/bluemountainsprings/blob/master/doc/using-springs-with-ruby.org">An example of using the API from Ruby</a></li>
+  <li><a href="https://github.com/Princeton-CDH/bluemountainsprings/blob/master/doc/using-springs-with-voyant.org">An example of using Blue Mountain Springs data with Voyant</a></li>
+</ul>
